--- a/generic.html
+++ b/generic.html
@@ -33,7 +33,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Zelda Recreation</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="img2.png" alt="" /></span>
 							<p>This is a recreation of underground dungeon from "The Legend of Zelda."</p>
 							<p>Some of the features we focused on were enemy recreation and map progression. Implementation of their logics including that of player were crucial. We experimented with boxcolliders, rigidbody, scripts, camera movement and sound system.</p>
 							
