--- a/generic.html
+++ b/generic.html
@@ -37,7 +37,7 @@
 							<p>This is a recreation of underground dungeon from "The Legend of Zelda."</p>
 							<p>Some of the features we focused on were enemy recreation and map progression. Implementation of their logics including that of player were crucial. We experimented with boxcolliders, rigidbody, scripts, camera movement and sound system.</p>
 							
-							<p>Download Mac/Windows Executable: <a href="http://example.com/path/to/yourfile.zip" download="YourFileName.zip">ZELDA.ZIP</a> </p>
+							<p>Download Mac/Windows Executable: <a href="https://drive.google.com/drive/folders/1-J_eehXMdveercbWx0FvO3LVQEab8vcr?usp=drive_link">ZELDA.ZIP</a> </p>
     
 						</div>
 					</section>
