--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
 								</div>
 							</div>
 						</section>
+						<section>
+							<a href="#" class="image"><img src="img.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Project 2: DemonSlayer Simulator </h2>
+									<p>Another project focusing on iterative process of game development. I created "DemonSlayer Simulator" inspired by the animation "DemonSlayer"</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
 				
 					</section>
 
