--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<h2>Project 2: DemonSlayer Simulator </h2>
 									<p>Another project focusing on iterative process of game development. I created "DemonSlayer Simulator" inspired by the animation "DemonSlayer"</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic2.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
