--- a/generic2.html
+++ b/generic2.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Zelda Recreation</title>
+		<title>DemonSlayer Simulator</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,11 +16,11 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Zelda Recreation</a>
+				<a href="index.html" class="title">DemonSlayer Simulator</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Zelda Recreation</a></li>
+						<li><a href="generic.html" class="active">DemonSlayer Simulator</a></li>
 						<li><a href="elements.html">Elements</a></li>
 					</ul>
 				</nav>
@@ -32,13 +32,24 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Zelda Recreation</h1>
+							<h1 class="major">DemonSlayer Simulator</h1>
 							<span class="image fit"><img src="img2.png" alt="" /></span>
-							<p>This is a recreation of underground dungeon from "The Legend of Zelda."</p>
-							<p>Some of the features we focused on were enemy recreation and map progression. Implementation of their logics including that of player were crucial. We experimented with boxcolliders, rigidbody, scripts, camera movement and sound system.</p>
+							<p>This is a game inspired by the animation "Demon Slayer"</p>
+							<p>Altough I put a lot of effort to resemble the atmosphere of the animation "Demon Slayer", the focus of this project is to gain experience in
+							iterative game design in which I develop the most challenging aspect of a new game in simple manner and get user feedback to improve further</p>
+							<p>
+							My original mechanic I bring to this game was Move-Attack mechanism in which the attack and movement are hard coupled to one another, making the player
+							to risk collision with the enemy in attempt to kill one. 
+							</p>
+							<p>The feedback I got the most was that there is a gap of thinking that I attacked the enemy, yet the collision happens first, making the
+							game somewhat hard and illogical. Although the timing of attack is intended, I improved the collision mechanism significantly straightforward so that the player doen not
+							feel that gap to provide more enjoyable experience</p>
+
+		
 							
-							<p>Download Mac/Windows Executable: <a href="https://drive.google.com/drive/folders/1-J_eehXMdveercbWx0FvO3LVQEab8vcr?usp=drive_link">ZELDA.ZIP</a> </p>
+							<p>Download Mac/Windows Executable of P2_Gold_Spike (origianl version): <a href="https://drive.google.com/drive/folders/1-J_eehXMdveercbWx0FvO3LVQEab8vcr?usp=drive_link">P2_Gold_Spike.ZIP</a> </p>
     
+							<p>Download Mac/Windows Executable of P2_Gold (improved version): <a href="https://drive.google.com/drive/folders/1-J_eehXMdveercbWx0FvO3LVQEab8vcr?usp=drive_link">P2_Gold.ZIP</a> </p>
 						</div>
 					</section>
 
