--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="img.png" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="dem.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Project 2: DemonSlayer Simulator </h2>
