--- a/generic2.html
+++ b/generic2.html
@@ -33,7 +33,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">DemonSlayer Simulator</h1>
-							<span class="image fit"><img src="img2.png" alt="" /></span>
+							<span class="image fit"><img src="dem2.png" alt="" /></span>
 							<p>This is a game inspired by the animation "Demon Slayer"</p>
 							<p>Altough I put a lot of effort to resemble the atmosphere of the animation "Demon Slayer", the focus of this project is to gain experience in
 							iterative game design in which I develop the most challenging aspect of a new game in simple manner and get user feedback to improve further</p>
