--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
 								</div>
 							</div>
 						</section>
+						<section>
+							<a href="#" class="image"><img src="dem.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Project 3: B4 Last Shift </h2>
+									<p>Final project incorporating the essence of EECS 494 Game Development</p>
+									<ul class="actions">
+										<li><a href="generic3.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
 				
 					</section>
 
