--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="gif3-ezgif.com-optimize (1).gif" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="p3.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Project 3: B4 Last Shift </h2>
